Dark mode fixes

--- a/app/javascript/css/rooms.scss
+++ b/app/javascript/css/rooms.scss
@@ -23,6 +23,7 @@
     border-right: 1px solid rgba(0, 0, 0, 0.125);
     height: 100%;
     overflow-y: auto;
+    background-color: transparent;
 
     @media (prefers-color-scheme: dark) {
       border-right: 1px solid #f3f3f32b;
