--- a/app/javascript/css/site.scss
+++ b/app/javascript/css/site.scss
@@ -53,7 +53,7 @@ body {
   @media (prefers-color-scheme: dark) {
     box-shadow: 20px 20px 60px #202020,
     -20px -20px 60px #404040;
-    border: 1px solid #8e8989;
+    border: 1px solid #5d5858;
   }
 
   @media (prefers-color-scheme: light) {
@@ -99,8 +99,8 @@ body {
       transition: opacity 150ms ease-in-out;
 
       a {
-        color: #007bff!important;
-        text-decoration: none!important;
+        color: #007bff !important;
+        text-decoration: none !important;
       }
 
       &:hover {
@@ -133,7 +133,7 @@ body {
   }
 
   a:hover {
-    color: #007bff!important;
+    color: #007bff !important;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -143,6 +143,12 @@ body {
 
 nav.bg-dark {
   @media (prefers-color-scheme: dark) {
-    background-color: black!important;
+    background-color: black !important;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .form-control {
+    border: 1px solid #5f6367 !important;
   }
 }
